# ingredients

./: .env.example  .gitignore  Cargo.toml  IMPLEMENTATION.md  INGREDIENT_DATA_MODEL.md  README.md  data_model.md  deny.toml  test_data_model.sh  test_regex.rs
.github/: CODE_REVIEW.md  copilot-instructions.md  pre-commit-hook.sh
.github/workflows/: code-review.yml  quality-checks.yml
config/: measurement_units.json
examples/: README.md  data_model_examples.rs  measurement_detection.rs  recipe_parser.rs
locales/en/: main.ftl
locales/fr/: main.ftl
src/: bot.rs  circuit_breaker.rs  db.rs  dialogue.rs  ingredient_integration.rs  ingredient_model.rs  ingredient_parser.rs  instance_manager.rs  lib.rs  localization.rs  main.rs  measurement_patterns.rs  measurement_types.rs  ocr.rs  ocr_config.rs  ocr_errors.rs  text_processing.rs
src/bot/: callback_handler.rs  dialogue_manager.rs  message_handler.rs  mod.rs  ui_builder.rs
tests/: bot_tests.rs  db_tests.rs  dialogue_tests.rs  integration_tests.rs  localization_tests.rs  ocr_tests.rs  text_processing_tests.rs
