[package]
name = "ingredients"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = "0.17.0"
rusqlite = "0.37.0"
tokio = { version = "1.47.1", features = ["full"] }
dotenv = "0.15.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
tempfile = "3.0"
libsqlite3-sys = "0.35"
reqwest = { version = "0.12", features = ["json"] }