[package]
name = "ingredients"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = "0.17.0"
rusqlite = "0.37.0"
tokio = { version = "1.47.1", features = ["full"] }
dotenv = "0.15.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
tempfile = "3.0"
libsqlite3-sys = "0.35"
reqwest = { version = "0.12", features = ["json"] }
leptess = "0.14" # Rust binding for Tesseract and Leptonica
image = "0.24"    # For image handling if needed
rand = "0.8" # For random jitter in retry delays
fluent = "0.16" # Internationalization library
fluent-bundle = "0.15" # Fluent bundle for message management
fluent-resmgr = "0.0.4" # Resource manager for fluent
unic-langid = "0.9" # Language identifier support
regex = "1.0" # Regular expressions for ingredient parsing
serde = { version = "1.0", features = ["derive"] } # Serialization for ingredient data