[package]
name = "ingredients"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [ "postgres", "runtime-tokio-native-tls", "chrono" ] }
tokio = { version = "1.47.1", features = ["full"] }
dotenv = "0.15.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
tempfile = "3.0"
reqwest = { version = "0.12", features = ["json"] }
leptess = "0.14" # Rust binding for Tesseract and Leptonica
image = "0.24"    # For image handling if needed
rand = "0.8" # For random jitter in retry delays
fluent = "0.16" # Internationalization library
fluent-bundle = "0.15" # Fluent bundle for message management
fluent-resmgr = "0.0.4" # Resource manager for fluent
unic-langid = "0.9" # Language identifier support
regex = "1.10" # Regular expressions for text processing
lazy_static = "1.4" # Lazy static initialization
chrono = { version = "0.4", features = ["serde"] } # DateTime handling
tracing = "0.1" # Structured logging
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] } # Tracing subscriber with filtering

[[example]]
name = "recipe_parser"
path = "examples/recipe_parser.rs"